force-app/main/default/objects/IntegrationSettings__c/IntegrationSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>setting for using Integration Requests</description>
    <label>Xfleet Integration</label>
</CustomObject>