force-app/main/default/objects/IntegrationSettings__c/fields/Batch_Job_Delay_in_minutes__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Delay_in_minutes__c</fullName>
    <defaultValue>3</defaultValue>
    <description>integration job is scheduled to run after X minutes after &quot;trigger&quot;</description>
    <inlineHelpText>integration job is scheduled to run after X minutes after &quot;trigger&quot;</inlineHelpText>
    <label>Batch Job Delay (in minutes)</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>