force-app/main/default/objects/IntegrationSettings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>How many Integration Request are processed in one batch run. Choose lower number if you have issue with timeout or limits.</description>
    <inlineHelpText>How many Integration Request are processed in one batch run. Choose lower number if you have issue with timeout or limits.</inlineHelpText>
    <label>Batch Size</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>