force-app/main/default/objects/IntegrationSettings__c/fields/Job_last_run_at__c.field-meta.xml
<CustomField>
    <fullName>Job_last_run_at__c</fullName>
    <description>When the Integration Requests have been last processed.</description>
    <inlineHelpText>When the Integration Requests have been last processed.</inlineHelpText>
    <label>Job last run at</label>
    <type>DateTime</type>
</CustomField>